[package]
name = "fear"
version = "0.1.0"
authors = ["jbrilha <j.brilha@campus.fct.unl.pt>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.30"
lopdf = { version = "0.34.0", features = ["tokio"] }
ratatui = "0.28.1"
tokio = { version = "1.39.3", features = ["full"] }
